--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Kamień, papier, nożyce</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 	<div class="container">
 		<div id="buttons"></div>
+		<button id="play-rock">Kamień</button>
+		<button id="play-paper">Papier</button>
+		<button id="play-scissors">Nożyce</button>
 		<div id="messages"></div>
 	</div>
-	<script src="js/functions.js"></script>
-	<script src="js/script.js"></script>
+	<script src="./js/functions.js"></script>
+	<script src="./js/script.js"></script>
 </body>
 </html>
